Fixed some layout issues Stopped scrollbar handler from working when a or button is clicked/dragged Added column-gap helpers

--- a/wp-content/themes/nok-2025-v1/css/_nok-helpers.scss
+++ b/wp-content/themes/nok-2025-v1/css/_nok-helpers.scss
@@ -290,6 +290,14 @@ $utilities: (
                 class: #{nok-variables.$prefix}-grid-gap,
                 values: $padding-base-values
         ),
+        "column-gap": (
+                css-var: true,
+                css-variable-name: column-gap,
+                no-prefix: true,
+                responsive-up-to: true,
+                class: #{nok-variables.$prefix}-column-gap,
+                values: $padding-base-values
+        ),
         "padding": (
                 property: padding,
                 responsive: true,
